<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountMainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/activity_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/account_header_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="top"
        android:text="@string/header_account_main"
        android:textAppearance="@style/page_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_name_text_view"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="204dp"
        android:layout_marginTop="136dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/inter_semibold"
        android:gravity="top"
        android:text="@string/account_name_placeholder"
        android:textAppearance="@style/basic_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/account_pic_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/account_profile_button_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@mipmap/mugshot" />

    <View
        android:id="@+id/account_profile_button_view"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:background="@drawable/account_button_square"
        app:layout_constraintEnd_toStartOf="@+id/account_roles_button_view"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/account_roles_button_view"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:background="@drawable/account_button_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/account_apply_button"
        android:layout_width="310dp"
        android:layout_height="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/account_button_big_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <View
        android:id="@+id/rating_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="248dp"
        android:background="@drawable/account_button_square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_apply_text"
        android:layout_width="232dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/account_apply"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_apply_button"
        app:layout_constraintEnd_toEndOf="@+id/account_apply_button"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/account_apply_icon"
        app:layout_constraintTop_toTopOf="@+id/account_apply_button"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/account_apply_text2"
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:autoSizeTextType="uniform"
        android:gravity="top"
        android:text="@string/account_apply2"
        android:textAppearance="@style/basic_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_apply_button"
        app:layout_constraintEnd_toEndOf="@+id/account_apply_button"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/account_apply_icon"
        app:layout_constraintTop_toBottomOf="@+id/account_apply_text"
        app:layout_constraintVertical_bias="0.304" />

    <View
        android:id="@+id/account_logout_button"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:background="@drawable/account_button_small_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/account_score_button"
        android:layout_width="75dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/account_button_mini_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/account_roles_button_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toEndOf="@+id/account_pic_image_view"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.826" />

    <ImageView
        android:id="@+id/account_score_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:src="@drawable/psychiatry"
        app:layout_constraintBottom_toBottomOf="@+id/account_score_button"
        app:layout_constraintStart_toStartOf="@+id/account_score_button"
        app:layout_constraintTop_toTopOf="@+id/account_score_button"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/account_profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/person"
        app:layout_constraintBottom_toTopOf="@+id/account_roles_text"
        app:layout_constraintEnd_toEndOf="@+id/account_profile_button_view"
        app:layout_constraintStart_toStartOf="@+id/account_profile_button_view"
        app:layout_constraintTop_toTopOf="@+id/account_profile_button_view" />

    <ImageView
        android:id="@+id/account_roles_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/group"
        app:layout_constraintBottom_toTopOf="@+id/account_roles_text"
        app:layout_constraintEnd_toEndOf="@+id/account_roles_button_view"
        app:layout_constraintStart_toStartOf="@+id/account_roles_button_view"
        app:layout_constraintTop_toTopOf="@+id/account_roles_button_view" />

    <ImageView
        android:id="@+id/rating_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/psychiatry"
        app:layout_constraintBottom_toTopOf="@+id/account_roles_text"
        app:layout_constraintEnd_toEndOf="@+id/rating_button"
        app:layout_constraintStart_toStartOf="@+id/rating_button"
        app:layout_constraintTop_toTopOf="@+id/account_roles_button_view" />

    <ImageView
        android:id="@+id/account_apply_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/potted_plant"
        app:layout_constraintBottom_toBottomOf="@+id/account_apply_button"
        app:layout_constraintEnd_toEndOf="@+id/account_apply_button"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/account_apply_button"
        app:layout_constraintTop_toTopOf="@+id/account_apply_button"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/account_logout_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="@+id/account_logout_button"
        app:layout_constraintEnd_toEndOf="@+id/account_logout_button"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/account_logout_button"
        app:layout_constraintTop_toTopOf="@+id/account_logout_button"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/account_ratings_text_view"
        android:layout_width="32dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:gravity="top"
        android:text="@string/account_rating_placeholder"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_score_button"
        app:layout_constraintEnd_toEndOf="@+id/account_score_button"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/account_score_icon"
        app:layout_constraintTop_toTopOf="@+id/account_score_button" />

    <TextView
        android:id="@+id/account_profile_text"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/account_profile"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_profile_button_view"
        app:layout_constraintEnd_toEndOf="@+id/account_profile_button_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/account_profile_button_view"
        app:layout_constraintTop_toTopOf="@+id/account_profile_button_view"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/account_roles_text"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/account_roles"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_roles_button_view"
        app:layout_constraintEnd_toEndOf="@+id/account_roles_button_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/account_roles_button_view"
        app:layout_constraintTop_toTopOf="@+id/account_roles_button_view"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="Rating"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/rating_button"
        app:layout_constraintEnd_toEndOf="@+id/rating_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rating_button"
        app:layout_constraintTop_toTopOf="@+id/rating_button"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/account_logout_text"
        android:layout_width="118dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/account_logout"
        android:textAppearance="@style/label_text"
        app:layout_constraintBottom_toBottomOf="@+id/account_logout_button"
        app:layout_constraintEnd_toEndOf="@+id/account_logout_button"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toEndOf="@+id/account_logout_icon"
        app:layout_constraintTop_toTopOf="@+id/account_logout_button" />

</androidx.constraintlayout.widget.ConstraintLayout>